--- a/index.html
+++ b/index.html
@@ -1076,7 +1076,7 @@
             {
                 id: 'tf1',
                 name: 'TF1',
-                logo: 'https://upload.wikimedia.org/wikipedia/commons/thumb/d/dc/2018_TF1_logo.svg/1200px-2018_TF1_logo.svg.png',
+                logo: 'https://upload.wikimedia.org/wikipedia/commons/thumb/4/46/TF1_logo_2006.svg/2560px-TF1_logo_2006.svg.png',
                 description: 'Première chaîne de télévision généraliste française. Actualités, divertissement, fiction.',
                 category: 'Généraliste',
                 url: 'https://www.tf1.fr/tf1/direct',
@@ -1085,7 +1085,7 @@
             {
                 id: 'france2',
                 name: 'France 2',
-                logo: 'https://upload.wikimedia.org/wikipedia/commons/thumb/7/7b/France_2_logo_2018.svg/1200px-France_2_logo_2018.svg.png',
+                logo: 'https://upload.wikimedia.org/wikipedia/commons/thumb/b/b8/France_2_-_logo_2018.svg/2560px-France_2_-_logo_2018.svg.png',
                 description: 'Chaîne publique généraliste. JT, magazines, divertissement et cinéma français.',
                 category: 'Généraliste',
                 url: 'https://www.france.tv/france-2/direct.html',
@@ -1094,7 +1094,7 @@
             {
                 id: 'france3',
                 name: 'France 3',
-                logo: 'https://upload.wikimedia.org/wikipedia/commons/thumb/b/b8/France_3_logo_2018.svg/1200px-France_3_logo_2018.svg.png',
+                logo: 'https://upload.wikimedia.org/wikipedia/commons/thumb/0/09/France_3_-_logo_2018.svg/1200px-France_3_-_logo_2018.svg.png',
                 description: 'Télévision régionale publique. Information locale et programmes régionaux.',
                 category: 'Régionale',
                 url: 'https://www.france.tv/france-3/direct.html',
@@ -1103,7 +1103,7 @@
             {
                 id: 'canal+',
                 name: 'Canal+',
-                logo: 'https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Canal%2B.svg/1200px-Canal%2B.svg.png',
+                logo: 'https://upload.wikimedia.org/wikipedia/commons/thumb/5/5d/Logo_Canal%2B_1995.svg/2560px-Logo_Canal%2B_1995.svg.png',
                 description: 'Chaîne premium. Cinéma, sport, séries exclusives et divertissement.',
                 category: 'Premium',
                 url: 'https://www.canalplus.com/',
@@ -1112,7 +1112,7 @@
             {
                 id: 'france5',
                 name: 'France 5',
-                logo: 'https://upload.wikimedia.org/wikipedia/commons/thumb/8/85/France_5_logo_2018.svg/1200px-France_5_logo_2018.svg.png',
+                logo: 'https://upload.wikimedia.org/wikipedia/commons/thumb/b/bc/France_5_-_logo_2018.svg/1280px-France_5_-_logo_2018.svg.png',
                 description: 'Chaîne éducative et culturelle. Documentaires, magazines de société.',
                 category: 'Culturelle',
                 url: 'https://www.france.tv/france-5/direct.html',
@@ -1121,7 +1121,7 @@
             {
                 id: 'm6',
                 name: 'M6',
-                logo: 'https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/M6_logo_2009.svg/1200px-M6_logo_2009.svg.png',
+                logo: 'https://upload.wikimedia.org/wikipedia/commons/thumb/a/a6/M6_logo.svg/2560px-M6_logo.svg.png',
                 description: 'Chaîne généraliste privée. Divertissement, téléréalité, magazines.',
                 category: 'Généraliste',
                 url: 'https://www.6play.fr/m6/direct',
@@ -1130,7 +1130,7 @@
             {
                 id: 'arte',
                 name: 'Arte',
-                logo: 'https://upload.wikimedia.org/wikipedia/commons/thumb/0/0e/Arte_Logo_2017.svg/1200px-Arte_Logo_2017.svg.png',
+                logo: 'https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Arte-Logo.svg/2560px-Arte-Logo.svg.png',
                 description: 'Chaîne culturelle franco-allemande. Culture, documentaires, cinéma d\'auteur.',
                 category: 'Culturelle',
                 url: 'https://www.arte.tv/fr/direct/',
@@ -1139,7 +1139,7 @@
             {
                 id: 'c8',
                 name: 'C8',
-                logo: 'https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/C8_logo_2016.svg/1200px-C8_logo_2016.svg.png',
+                logo: 'https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/Logo_C8_2016.svg/1200px-Logo_C8_2016.svg.png',
                 description: 'Chaîne de divertissement. Talk-shows, débats, films et séries.',
                 category: 'Divertissement',
                 url: 'https://www.canalplus.com/chaines/c8',
@@ -1148,7 +1148,7 @@
             {
                 id: 'w9',
                 name: 'W9',
-                logo: 'https://upload.wikimedia.org/wikipedia/commons/thumb/2/20/W9_logo_2016.svg/1200px-W9_logo_2016.svg.png',
+                logo: 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS9i3U_QEmdjqfBmnLtaInYNY5uYJqJmTDRlA&s',
                 description: 'Chaîne de divertissement du groupe M6. Téléréalité et magazines.',
                 category: 'Divertissement',
                 url: 'https://www.6play.fr/w9/direct',
@@ -1157,7 +1157,7 @@
             {
                 id: 'tmc',
                 name: 'TMC',
-                logo: 'https://upload.wikimedia.org/wikipedia/commons/thumb/c/c8/TMC_logo_2016.svg/1200px-TMC_logo_2016.svg.png',
+                logo: 'https://upload.wikimedia.org/wikipedia/fr/thumb/a/a8/TMC_logo_2016.svg/1200px-TMC_logo_2016.svg.png',
                 description: 'Télé Monte Carlo. Divertissement, films et programmes de téléréalité.',
                 category: 'Divertissement',
                 url: 'https://www.tf1.fr/tmc/direct',
@@ -1166,7 +1166,7 @@
             {
                 id: 'tf1-series-films',
                 name: 'TF1 Séries Films',
-                logo: 'https://upload.wikimedia.org/wikipedia/commons/thumb/4/4a/TF1_S%C3%A9ries_Films_logo_2018.svg/1200px-TF1_S%C3%A9ries_Films_logo_2018.svg.png',
+                logo: 'https://upload.wikimedia.org/wikipedia/fr/thumb/5/5f/TF1_S%C3%A9ries_Films_logo_2018.svg/2560px-TF1_S%C3%A9ries_Films_logo_2018.svg.png',
                 description: 'Chaîne dédiée aux séries et films. Rediffusions et programmes exclusifs.',
                 category: 'Fiction',
                 url: 'https://www.tf1.fr/tf1-series-films/direct',
@@ -1175,7 +1175,7 @@
             {
                 id: 'l-equipe',
                 name: 'L\'Équipe',
-                logo: 'https://upload.wikimedia.org/wikipedia/commons/thumb/e/e2/La_Cha%C3%AEne_L%27%C3%89quipe_logo_2016.svg/1200px-La_Cha%C3%AEne_L%27%C3%89quipe_logo_2016.svg.png',
+                logo: 'https://upload.wikimedia.org/wikipedia/commons/thumb/4/4a/L%27Equipe_logo.png/799px-L%27Equipe_logo.png',
                 description: 'Chaîne 100% sport. Actualités sportives, matchs en direct, magazines.',
                 category: 'Sport',
                 url: 'https://www.lequipe.fr/tv/',
@@ -1976,3 +1976,4 @@
     </script>
 </body>
 </html>
+
